--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     // ViewModel and LiveData
     def lifecycle_version = "1.1.1"
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    //media playback
+    compile 'com.google.android.exoplayer:exoplayer:r2.2.0'
+
 }
