--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.recipeDetails.RecipeDetailsActivity"
-            android:parentActivityName=".ui.recipelist.RecipeListActivity"/>
+        <activity
+            android:name=".ui.recipeDetails.RecipeDetailsActivity"
+            android:parentActivityName=".ui.recipelist.RecipeListActivity" />
         <activity android:name=".ui.recipelist.RecipeListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.stepdetails.StepDetailsActivity"></activity>
     </application>
 
 </manifest>
