--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,7 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     //media playback
     implementation 'com.google.android.exoplayer:exoplayer:r2.2.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
 }
