--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!--android:configChanges="keyboardHidden|orientation|screenSize"-->
+
         <activity
             android:name=".ui.recipeDetails.RecipeDetailsActivity"
             android:parentActivityName=".ui.recipelist.RecipeListActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
             />
         <activity android:name=".ui.recipelist.RecipeListActivity">
             <intent-filter>
